--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,62 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Creato";
+  src: url("../fonts/CreatoDisplay-Bold.woff2") format("woff2"),
+    url("../fonts/CreatoDisplay-Bold.woff") format("woff"),
+    url("../fonts/CreatoDisplay-Bold.ttf") format("truetype"),
+    url("../fonts/CreatoDisplay-Bold.otf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Creato";
+  src: url("../fonts/CreatoDisplay-Regular.woff2") format("woff2"),
+    url("../fonts/CreatoDisplay-Regular.woff") format("woff"),
+    url("../fonts/CreatoDisplay-Regular.otf") format("opentype"),
+    url("../fonts/CreatoDisplay-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Creato";
+  src: url("../fonts/CreatoDisplay-ExtraBold.woff2") format("woff2"),
+    url("../fonts/CreatoDisplay-ExtraBold.woff") format("woff"),
+    url("../fonts/CreatoDisplay-ExtraBold.ttf") format("truetype"),
+    url("../fonts/CreatoDisplay-ExtraBold.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Helvetica2";
+  src: url("../fonts/Helvetica.ttf") format("truetype");
+  src: url("../fonts/Helvetica.woff") format("woff");
+  src: url("../fonts/Helvetica.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Helvetica2";
+  src: url("../fonts/Helvetica-Bold.ttf") format("truetype");
+  src: url("../fonts/Helvetica-Bold.woff2") format("woff");
+  src: url("../fonts/Helvetica-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+* {
+  font-family: "Creato", sans-serif;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
