--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,7 +125,34 @@
   background: #00bbff;
 }
 
-h2 {
+h1 {
+  margin: 0;
+  display: block;
+  font-size: 2em;
   font-weight: bold;
+}
+
+h2 {
+  display: block;
   font-size: 1.5em;
+  font-weight: bold;
+}
+h3 {
+  display: block;
+  font-weight: bold;
+  font-size: 1.17em;
+}
+h4 {
+  display: block;
+  font-weight: bold;
+  font-size: 1em;
+}
+h5 {
+  font-weight: bold;
+  display: block;
+}
+h6 {
+  display: block;
+  font-weight: bold;
+  font-size: 0.67em;
 }
