--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -156,7 +156,7 @@ h6 {
   font-weight: bold;
   font-size: 0.67em;
 }
-
+/* 
 .markdown-container h1,
 .markdown-container h2,
 .markdown-container h3,
@@ -164,4 +164,16 @@ h6 {
 .markdown-container h5,
 .markdown-container h6 {
   margin-top: 20px !important;
+} */
+
+ol,
+ul,
+menu {
+  list-style: auto;
+  margin: 0;
+  padding: 0;
+}
+
+.markdown-container > * {
+  all: revert;
 }
