--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -166,6 +166,13 @@ h6 {
   margin-top: 20px !important;
 } */
 
+.markdown-container a {
+  color: #00bbff;
+}
+.markdown-container a:hover {
+  text-decoration: underline;
+}
+
 ol,
 ul,
 menu {
