A lot of UI changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -184,6 +184,9 @@ menu {
 .markdown-container > * {
   all: revert;
 }
+.markdown-container {
+  overflow: hidden;
+}
 
 /* body {
   cursor: none;
